Fix session restore for KWrite

BUG: 463139


(cherry picked from commit 4082f64a9695287ee87c712ef1287fabe8ee8c9b)